Fixed result collapse arroe css and js.

--- a/src/main/resources/css/reporting.css
+++ b/src/main/resources/css/reporting.css
@@ -166,6 +166,10 @@
     cursor: pointer;
 }
 
+.mod-header{
+   margin-left: 16px;
+}
+
 .mod-header .toggle-title {
     display: inline-block;
 }
